# quant-research-framework-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  parity.yml  publish-crates.yml
data/: EURUSD_1h.csv  SOLUSDT_1h.csv
examples/: README.md  atr_cross.rs  batch_runner.rs  gen_synthetic.rs  ml_callback.rs  ml_precomputed.rs  regime_custom.rs
src/: lib.rs  main.rs
tests/: behavioural.rs  contract_v0_2.rs  invariants.rs
tools/: bench.py  bench_paper.py  parity_check.py  parity_combo.py  parity_forex.py  parity_ledger.py  parity_regime.py
tools/ablations/: README.md  fee_bias.sh  fill_off_by_one.sh  funding_sign.sh  funding_skip.sh  sl_tp_priority.sh
