[package]
name = "quant-research-framework-rs"
version = "0.3.1"
edition = "2021"
description = "Walk-forward backtester with robustness tests (Rust port of quant-research-framework)"
license = "MIT"
repository = "https://github.com/DaruFinance/quant-research-framework-rs"

[dependencies]
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = { version = "0.8", default-features = false }

[[bin]]
name = "backtester"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
