[package]
name = "quant-research-framework-rs"
version = "0.3.3"
edition = "2021"
description = "Walk-forward backtester with robustness tests (Rust port of quant-research-framework)"
license = "MIT"
repository = "https://github.com/DaruFinance/quant-research-framework-rs"

[dependencies]
# Pinned to "=0.9" because rand 0.10 makes `random_range` / `random` trait
# methods on `RngExt`, breaking call sites in src/lib.rs (Monte Carlo,
# news-candle injection, indicator-variance overlay) until they are
# rewritten with explicit `use rand::Rng;` imports. See dependabot PR
# closing notes; bump once the trait-method migration is folded into a
# behavioural-change release window.
rand = "=0.9"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = { version = "0.8", default-features = false }

[dev-dependencies]
# Rayon is used only by the parallel batch_runner example; it is NOT a
# runtime dependency of the engine and does not appear in the published
# parity claim of three direct deps in §5.1 of the paper.
rayon = "1.10"

[[bin]]
name = "backtester"
path = "src/main.rs"

[[example]]
name = "batch_runner"
path = "examples/batch_runner.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
